Mobile responsive fix
Added viewport meta tag and improved responsive design for smaller screens.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>SAHODARA INTERNATIONAL PUBLIC SCHOOL</title>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       background: linear-gradient(135deg, #0f172a, #1e293b);
@@ -10,13 +10,16 @@
       font-family: Arial, sans-serif;
       padding: 20px;
     }
+  .box {
+  background-color: rgba(2, 6, 23, 0.85);
+  padding: 20px;
+  border-radius: 10px;
+  width: 100%;
+  max-width: 900px;
+  margin: auto;
+}
 
-    .box {
-      background-color: rgba(2, 6, 23, 0.85);
-      padding: 20px;
-      border-radius: 10px;
-      max-width: 800px;
-      margin: auto;
+      
     }
 
     h1, h2 {
@@ -38,6 +41,24 @@
       margin-top: 20px;
       color: #94a3b8;
       font-size: 14px;
+    @media (max-width: 600px) {
+  body {
+    padding: 10px;
+  }
+
+  h1 {
+    font-size: 22px;
+  }
+
+  h2 {
+    font-size: 18px;
+  }
+
+  p, li {
+    font-size: 15px;
+  }
+}
+
     }
   </style>
 
