--- a/index.html
+++ b/index.html
@@ -1,120 +1,162 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>SAHODARA INTERNATIONAL PUBLIC SCHOOL</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- VERY IMPORTANT FOR MOBILE -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
-      background: linear-gradient(135deg, #0f172a, #1e293b);
-      color: white;
+      margin: 0;
+      padding: 0;
       font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #020617, #0f172a);
+      color: #ffffff;
+    }
+
+    .container {
+      width: 100%;
+      padding: 15px;
+    }
+
+    .card {
+      width: 100%;
+      max-width: 1000px;
+      margin: auto;
+      background: rgba(2, 6, 23, 0.9);
       padding: 20px;
-    }
-  .box {
-  background-color: rgba(2, 6, 23, 0.85);
-  padding: 20px;
-  border-radius: 10px;
-  width: 100%;
-  max-width: 900px;
-  margin: auto;
-}
-
-      
+      border-radius: 12px;
     }
 
-    h1, h2 {
-      color: #38bdf8;
+    h1 {
       text-align: center;
+      color: #38bdf8;
+      font-size: 26px;
+      margin-bottom: 5px;
     }
 
-    p, li {
+    .address {
+      text-align: center;
+      font-size: 14px;
+      color: #cbd5f5;
+      margin-bottom: 15px;
+    }
+
+    hr {
+      border: none;
+      border-top: 1px solid #334155;
+      margin: 15px 0;
+    }
+
+    h2 {
+      color: #38bdf8;
+      font-size: 20px;
+      margin-top: 20px;
+    }
+
+    p {
       font-size: 16px;
       line-height: 1.6;
     }
 
     ul {
-      margin-left: 20px;
+      padding-left: 20px;
+    }
+
+    li {
+      font-size: 16px;
+      margin-bottom: 8px;
+      line-height: 1.5;
     }
 
     .footer {
       text-align: center;
       margin-top: 20px;
+      font-size: 13px;
       color: #94a3b8;
-      font-size: 14px;
+    }
+
+    /* MOBILE OPTIMIZATION */
     @media (max-width: 600px) {
-  body {
-    padding: 10px;
-  }
+      h1 {
+        font-size: 22px;
+      }
 
-  h1 {
-    font-size: 22px;
-  }
+      h2 {
+        font-size: 18px;
+      }
 
-  h2 {
-    font-size: 18px;
-  }
+      p, li {
+        font-size: 15px;
+      }
 
-  p, li {
-    font-size: 15px;
-  }
-}
-
+      .card {
+        padding: 15px;
+      }
     }
   </style>
-
 </head>
+
 <body>
 
-<div class="box">
+<div class="container">
+  <div class="card">
 
-<h1>SAHODARA INTERNATIONAL PUBLIC SCHOOL</h1>
-<p style="text-align:center;">
-  <strong>Address:</strong> Jankinagar, Kushinagar, Uttar Pradesh
-</p>
+    <h1>SAHODARA INTERNATIONAL PUBLIC SCHOOL</h1>
+    <div class="address">
+      Address: Jankinagar, Kushinagar, Uttar Pradesh
+    </div>
 
-<hr>
+    <hr>
 
-<h2>🏫 About Our School</h2>
-<p>
-Sahodara International Public School is committed to providing quality education
-in a disciplined, safe, and student-friendly environment.
-The school focuses on academic excellence along with moral values.
-</p>
+    <h2>🏫 About Our School</h2>
+    <p>
+      Sahodara International Public School is committed to providing quality
+      education in a disciplined, safe, and student-friendly environment.
+      The school focuses on academic excellence along with moral values.
+    </p>
 
-<h2>🌟 School Leadership & Support System</h2>
-<ul>
-  <li><strong>Secretary:</strong> Sonu Sir – Very kind, humble, and always supportive towards students.</li>
-  <li><strong>Managing Director (MD):</strong> Mr. Mahendra Singh – Extremely kind, caring, and visionary.</li>
-  <li><strong>Principal:</strong> Mrs. Anuradha Singh – Super kind, disciplined, and highly motivating.</li>
-</ul>
+    <h2>🌟 School Leadership & Support System</h2>
+    <ul>
+      <li><strong>Secretary:</strong> Sonu Sir – Very kind, humble, and always supportive towards students.</li>
+      <li><strong>Managing Director (MD):</strong> Mr. Mahendra Singh – Extremely kind, caring, and visionary.</li>
+      <li><strong>Principal:</strong> Mrs. Anuradha Singh – Super kind, disciplined, and highly motivating.</li>
+    </ul>
 
-<h2>🧑‍🏫 Class 10th Special Support</h2>
-<ul>
-  <li><strong>Shailesh Sir</strong> – A highly supportive teacher for Class 10th, always helps students with doubts and board preparation.</li>
-  <li>Teachers focus on revision, practice, and confidence building for board exams.</li>
-</ul>
+    <h2>🧑‍🏫 Class 10th Special Support</h2>
+    <ul>
+      <li><strong>Shailesh Sir</strong> – A highly supportive teacher for Class 10th, always helps students with doubts and board preparation.</li>
+      <li>Teachers focus on revision, practice, and confidence building for board exams.</li>
+    </ul>
 
-<h2>📚 Academics & Student Support</h2>
-<ul>
-  <li>CBSE-based curriculum</li>
-  <li>English medium education</li>
-  <li>Special focus on Class 10th board preparation</li>
-  <li>Supportive and caring teachers</li>
-</ul>
+    <h2>📚 Academics & Student Support</h2>
+    <ul>
+      <li>CBSE-based curriculum</li>
+      <li>English medium education</li>
+      <li>Special focus on Class 10th board preparation</li>
+      <li>Supportive and caring teachers</li>
+    </ul>
 
-<h2>🏟️ Facilities</h2>
-<ul>
-  <li>Computer Laboratory</li>
-  <li>Science Laboratories</li>
-  <li>Library</li>
-  <li>Playground and sports facilities</li>
-  <li>Safe and disciplined campus</li>
-</ul>
+    <h2>🏟️ Facilities</h2>
+    <ul>
+      <li>Computer Laboratory</li>
+      <li>Science Laboratories</li>
+      <li>Library</li>
+      <li>Playground and sports facilities</li>
+      <li>Safe and disciplined campus</li>
+    </ul>
 
-<div class="footer">
-  © SAHODARA INTERNATIONAL PUBLIC SCHOOL | Digital Diary
-</div>
+    <div class="footer">
+      © SAHODARA INTERNATIONAL PUBLIC SCHOOL | Digital Diary
+    </div>
 
+  </div>
 </div>
 
 </body>
