Added all subject teachers support for board exams

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@ in a disciplined, safe, and student-friendly environment.
 <ul>
 <li><strong>Shailesh Sir</strong> – Highly supportive teacher for Class 10th board preparation.</li>
 <li>Special focus on revision, practice, and confidence building.</li>
+<li><strong>All subject teachers</strong> are very supportive and help students in the preparation of board examinations.</li>
 </ul>
 
 <h2>📚 Academics & Student Support</h2>
